--- a/Client/package.json
+++ b/Client/package.json
@@ -8,19 +8,30 @@
     "apollo-boost": "^0.4.7",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
+    "apollo-link-http": "^1.5.16",
+    "apollo-link-state": "^0.4.2",
+    "apollo-link-ws": "^1.0.19",
     "babel-plugin-styled-components": "^1.10.7",
     "graphql": "^14.6.0",
+    "js-cookie": "^2.2.1",
     "next": "^9.3.1",
     "next-compose-plugins": "^2.2.0",
+    "next-cookies": "^2.0.3",
     "next-with-apollo": "^5.0.0",
     "react": "^16.13.1",
+    "react-apollo": "^3.1.3",
     "react-dom": "^16.13.1",
+    "react-toastify": "^5.5.0",
     "styled-components": "^5.0.1",
-    "typescript": "^3.8.3"
+    "subscriptions-transport-ws": "^0.9.16",
+    "typescript": "^3.8.3",
+    "ws": "^7.2.3"
   },
   "devDependencies": {
     "@types/node": "^13.9.2",
-    "@types/styled-components": "^5.0.1"
+    "@types/styled-components": "^5.0.1",
+    "@types/react": "16.9.25",
+    "typescript": "^3.4.0-dev.20190226"
   },
   "scripts": {
     "dev": "next",
