--- a/Server/package.json
+++ b/Server/package.json
@@ -20,15 +20,16 @@
     "@types/jsonwebtoken": "^8.3.8",
     "@types/morgan": "^1.9.0",
     "@types/node": "^13.9.0",
+    "@types/nodemailer": "^6.4.0",
+    "@types/react": "^16.9.25",
+    "@types/twilio": "^2.11.0",
     "babel-runtime": "^6.26.0",
     "gql-merge": "0.0.6",
     "graphql": "^14.6.0",
     "graphql-to-typescript": "^0.1.2",
     "nodemon": "^2.0.2",
     "ts-node": "^8.6.2",
-    "typescript": "^3.8.3",
-    "@types/nodemailer": "^6.4.0",
-    "@types/twilio": "^2.11.0"
+    "typescript": "^3.8.3"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
