apollo nextjs config

--- a/Client/tsconfig.json
+++ b/Client/tsconfig.json
@@ -15,5 +15,11 @@
     "isolatedModules": true
   },
   "exclude": ["node_modules"],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/components/lib/initApollo.js",
+    "pages/_app.js"
+  ]
 }
