Ready To Roll With Fronend

--- a/Client/.babelrc
+++ b/Client/.babelrc
@@ -1,4 +1,10 @@
 {
   "presets": ["next/babel"],
-  "plugins": [["styled-components", { "ssr": true }]]
+  "plugins": [
+    ["graphql-tag"],
+    [
+      "styled-components",
+      { "ssr": true, "displayName": true, "preprocess": false }
+    ]
+  ]
 }
