--- a/Client/package.json
+++ b/Client/package.json
@@ -1,47 +1,53 @@
 {
-  "name": "mytaxi-client",
+  "name": "next-advanced-starter",
   "version": "1.0.0",
-  "description": "Ubber Clone",
-  "main": "index.js",
+  "license": "MIT",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "test": "jest"
+  },
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.3",
-    "apollo-boost": "^0.4.7",
-    "apollo-cache-inmemory": "^1.6.5",
-    "apollo-client": "^2.6.8",
-    "apollo-link-context": "^1.0.19",
-    "apollo-link-http": "^1.5.16",
-    "apollo-link-state": "^0.4.2",
+    "@apollo/react-hooks": "3.1.3",
+    "@apollo/react-ssr": "3.1.3",
+    "@apollo/react-testing": "3.1.3",
+    "@testing-library/react": "10.0.1",
+    "@types/cookie": "0.3.3",
+    "@types/date-fns": "2.6.0",
+    "@types/jest": "25.1.4",
+    "@types/react": "16.9.23",
+    "@types/styled-components": "^5.0.1",
+    "apollo-cache-inmemory": "1.6.5",
+    "apollo-client": "2.6.8",
+    "apollo-link-context": "1.0.19",
+    "apollo-link-http": "1.5.16",
     "apollo-link-ws": "^1.0.19",
-    "babel-plugin-styled-components": "^1.10.7",
-    "graphql": "^14.6.0",
-    "js-cookie": "^2.2.1",
-    "next": "^9.3.1",
-    "next-compose-plugins": "^2.2.0",
-    "next-cookies": "^2.0.3",
+    "babel-jest": "25.1.0",
+    "babel-plugin-graphql-tag": "2.5.0",
+    "cookie": "0.4.0",
+    "date-fns": "2.11.0",
+    "graphql": "14.6.0",
+    "graphql-tag": "2.10.3",
+    "https-proxy-agent": "5.0.0",
+    "i18next": "19.3.3",
+    "identity-obj-proxy": "3.0.0",
+    "isomorphic-unfetch": "3.0.0",
+    "jest": "25.1.0",
+    "next": "9.3.1",
+    "next-images": "^1.3.1",
     "next-with-apollo": "^5.0.0",
-    "react": "^16.13.1",
+    "nookies": "^2.2.0",
+    "normalize.css": "8.0.1",
+    "react": "16.13.0",
     "react-apollo": "^3.1.3",
-    "react-dom": "^16.13.1",
-    "react-toastify": "^5.5.0",
+    "react-dom": "16.13.0",
     "styled-components": "^5.0.1",
+    "styled-normalize": "^8.0.7",
     "subscriptions-transport-ws": "^0.9.16",
-    "typescript": "^3.8.3",
-    "ws": "^7.2.3"
+    "typescript": "3.8.3"
   },
   "devDependencies": {
-    "@types/node": "^13.9.2",
-    "@types/styled-components": "^5.0.1",
-    "@types/react": "16.9.25",
-    "typescript": "^3.4.0-dev.20190226"
-  },
-  "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start"
-  },
-  "keywords": [
-    "uber Clone mytaxi"
-  ],
-  "author": "IMRAN IRSHAD",
-  "license": "ISC"
+    "prettier": "1.19.1"
+  }
 }
