--- a/Client/.gitignore
+++ b/Client/.gitignore
@@ -1,4 +1,25 @@
-.next
-node_modules
-.env
-next.config.js
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# Dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# Testing
+/coverage
+
+# Next.js
+/.next/
+/out/
+
+# Production
+/build
+
+# MISC
+.DS_Store
+.env*
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
